# lowrr

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
black-extrap/: Cargo.toml
black-extrap/src/: main.rs
eval/: eval_all_displacement_errors.m  eval_all_flow_errors.m  eval_displacement_error.m  eval_flow_error.m  eval_registration.m  lowrr2warp.m  register.m  register_corr.m  register_surf.m  register_tform.m
examples/: lowrr_eval.rs  warp.rs  warp_crop.rs
lowrr-bin/: Cargo.toml
lowrr-bin/src/: main.rs
lowrr-lib/: Cargo.toml
lowrr-lib/src/: affine2d.rs  interop.rs  optimizer.rs  utils.rs
lowrr-lib/src/img/: crop.rs  interpolation.rs  mod.rs  multires.rs  registration.rs  sparse.rs  viz.rs
lowrr-wasm/: Cargo.toml  README.md
lowrr-wasm/src/: lib.rs  utils.rs
src/: affine2d.rs  filter.rs  gradients.rs  interop.rs  interpolation.rs  lib.rs  main.rs  multires.rs  optimizer.rs  registration.rs  registration_multires.rs  registration_tris.rs  sparse.rs  unused.rs  utils.rs
src/img/: crop.rs  filter.rs  gradients.rs  interpolation.rs  mod.rs  multires.rs  registration.rs  sparse.rs  viz.rs
warp-crop/: Cargo.toml
warp-crop/src/: main.rs
web/: elm.json
web-elm/: elm.json
web-elm/review/: elm.json  myReview.rvw
web-elm/review/src/: ReviewConfig.elm
web-elm/src/: CropForm.elm  Device.elm  Icon.elm  Main.elm  NumberInput.elm  Style.elm
web-elm/static/: index.html  lowrr-wasm-dist  lowrr.mjs  pkg  ports.js  worker.mjs
web/src/: Icon.elm  Main.elm  NumberInput.elm  NumericInput.elm  Style.elm
web/static/: font.css  index.html  main.js  ports.js  utils.js  worker.js
