[package]
name = "lowrr"
version = "0.1.0"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
clap = "2.33.3"
nalgebra = "0.25.1"
image = "0.23.14"
indicatif = "0.15.0"
anyhow = "1.0.38"
